tests/sema/fail/v22_fail_for_range_start_u64.ep
# COMPILE_FAIL_CONTAINS: for range start expected i64, got u64
fun main(): void {
    for i: u64(0):3 {
    }
}
